--- a/src/app/features/entities/components/client/new-client/new-client2.component.html
+++ b/src/app/features/entities/components/client/new-client/new-client2.component.html
@@ -708,7 +708,7 @@
                               [ngClass]="{ 'form-control': true, 'is-invalid': f['payment_details']['controls']['currency']['invalid']
                   && (f['payment_details']['controls']['currency']['dirty'] || f['payment_details']['controls']['currency']['touched']) }">
                         <option value="" disabled selected>{{ 'entities.select_currency' | translate }}</option>
-                        <option *ngFor="let currencies of currenciesData" value="{{ currencies.id }}">{{ currencies.nameAndSymbol | titlecase}}</option>
+                        <option *ngFor="let currencies of currenciesData" value="{{ currencies.id }}">{{ currencies?.nameAndSymbol | titlecase}}</option>
                       </select>
                       <div *ngIf="f['payment_details']['controls']['currency']['invalid']
                         && (f['payment_details']['controls']['currency']['dirty'] || f['payment_details']['controls']['currency']['touched'])" class="form-text text-danger">
